feat:新增地址提示

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>ilocat-location-h5</title>
   <script type="text/javascript" src="https://api.map.baidu.com/api?v=1.0&&type=webgl&ak=1ixaeTGQ9SIdRIbBu8kIcCwMcEtTiPtd"></script>
   <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="layui/css/layui.css">
 </head>
 <body>
   <div class="container">
@@ -18,6 +19,7 @@
       </div>
     </div>
   </div>
+  <script src="layui/layui.js"></script>
   <script type="text/javascript" src="index.js"></script>
 </body>
 </html>
